# embassy-rp-skeleton

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs  main.rs  patterns.rs  rainbow.rs
